feat: add account activation
